# Intent-Trading-Platform

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml.example  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployMockERC20.s.sol
docs/: api-reference.md  architecture.md  backup-restore.md  config.md  cross-chain.md  database.md  deployment.md  frontend.md  getting-started.md  htlc.md  invariants.md  log-aggregation.md  partitioning.md  query-optimization.md  runbook.md  security-audit.md  solver.md  tls-setup.md  verification-strategy.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
infra/: docker-compose.yml
migrations/: 001_users.sql  002_accounts.sql  003_balances.sql  004_ledger.sql  005_markets.sql  006_trades.sql  007_market_trades.sql  008_solvers.sql  009_intents.sql  010_bids.sql  011_fills.sql  012_executions.sql  013_failed_settlements.sql  014_idempotency_keys.sql  015_partial_fills.sql  016_intent_expired.sql  017_market_prices.sql  018_rbac.sql  019_api_keys.sql  020_fill_settlement.sql  021_jwt_keys.sql  022_partitioning.sql  023_twap.sql  024_query_optimization.sql  025_partition_archival.sql  026_granular_permissions.sql  027_consolidate_execution_timestamps.sql  028_order_types.sql  029_intent_amendments.sql  030_solver_positions.sql  031_stop_order_improvements.sql  032_solver_registration.sql  033_solver_stats.sql  034_wallet_and_transactions.sql  035_oracle_price_history.sql  036_market_chain.sql  037_market_chain_fields.sql  038_cross_chain_intents.sql  039_htlc.sql
programs/intentx-settlement/: Anchor.toml  Cargo.toml
programs/intentx-settlement/src/: lib.rs
programs/intentx-settlement/tests/: anchor_deploy_test.ts  litesvm_settlement.rs  settlement.rs
scripts/: anchor_deploy.sh  run-e2e.sh
src/: circuit_breaker.rs  lib.rs  main.rs  telemetry.rs  telemetry_middleware.rs
tests/: chaos_verify.rs  cross_chain_e2e.rs  e2e_test.rs  htlc_e2e.rs  infra_integration_test.rs  integration_test.rs  invariant_proptest.rs  twap_e2e.rs  wormhole_devnet.rs
(+214 files in other folders)
