[package]
name = "intent-trading"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
serde_json = "1"
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
tokio-stream = "0.1"
