[package]
name = "intent-trading"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "intent-trading"
path = "src/main.rs"

[[bin]]
name = "solver-bot"
path = "src/bin/solver_bot.rs"

[[bin]]
name = "api-gateway"
path = "src/bin/api_gateway.rs"

[[bin]]
name = "load-test"
path = "src/bin/load_test/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
serde_json = "1"
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.26"
rand = "0.9"
bcrypt = "0.17"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1"
http-body-util = "0.1"
prometheus = "0.14"
once_cell = "1"
dotenvy = "0.15"
jsonwebtoken = "9"
config = "0.14"
toml = "0.8"
tokio-util = "0.7"
